Create game element structure

--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
 </head>
 
 <body>
+    <header>
+        <h1>Number Guess Game</h1>
+    </header>
+
+    <section class="game-area">
+        <h3>Guess a number between 1 to 10</h3>
+        <div class="controls-area">
+            <input type="text" id="number">
+            <button id="guessBtn">Guess</button>
+        </div>
+        <div id="messages"></div>
+    </section>
+    <footer>
+        <h3>Rules</h3>
+        <p>Three chances to guess the correct number!</p>
+    </footer>
+    <script src=""></script>
 
 </body>
 
