Create score-area section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         </div>
         <div id="messages"></div>
     </section>
+    <section class="score-area">
+        <p class="scores">Correct Answers:<span id="score">0</span></p>
+        <p class="scores">Incorrect Answers:<span id="score">0</span></p>
+    </section>
     <footer>
         <h3>Rules</h3>
         <p>Three chances to guess the correct number!</p>
