Create assets folder, nest css and js folders within it

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3>Rules</h3>
         <p>Three chances to guess the correct number!</p>
     </footer>
-    <script src=""></script>
+    <script src="assets/js/script.js"></script>
 
 </body>
 
