Link style.css file to html file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <title>Number Guess Game</title>
     <!--Favicon-->
     <link rel="icon" type="images/x-icon" href="favicon/Favicon-32x32.png">
+    <!--Stylesheet-->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
