--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Number Guess Game. Leisure game, Project game">
     <meta name="keywords" content="number game, guess a number game, game, guess game">
     <!--Title-->
-    <title>Number Guess Game</title>
+    <title>Guess the footballer!</title>
     <!--Favicon-->
     <link rel="icon" type="images/x-icon" href="favicon/Favicon-32x32.png">
     <!--Stylesheet-->
