--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Number Guess Game. Leisure game, Project game">
     <meta name="keywords" content="number game, guess a number game, game, guess game">
     <!--Title-->
-    <title>Guess the footballer!</title>
+    <title>Name the footballer!</title>
     <!--Favicon-->
     <link rel="icon" type="images/x-icon" href="favicon/Favicon-32x32.png">
     <!--Stylesheet-->
@@ -17,16 +17,20 @@
 
 <body>
     <section class="container">
-        <h1 class="heading">Number Guess Game</h1>
+        <h1 class="heading">Guess the footballer!</h1>
         <div class="game-area">
-            <h3>Guess a number between 1 to 10</h3>
+            <h3>Name the footballer!</h3>
             <div class="controls-area">
-                <input type="text" id="number">
-                <button id="guessBtn">Guess</button>
+                <p>Who's this?</p>
+                <img id="randImg" src="" alt="Random image" />
             </div>
         </div>
         <div class="messages-area" id="messages"></div>
         <div class="score-area">
+            <input type="text" id="answer-box">
+            <button data-type="submit">Submit Answer</button>
+        </div>
+        <div>
             <p class="scores">Correct Answers:<span id="score">0</span></p>
             <p class="scores">Incorrect Answers:<span id="score">0</span></p>
         </div>
