Further edit title and heading elements

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Number Guess Game. Leisure game, Project game">
     <meta name="keywords" content="number game, guess a number game, game, guess game">
     <!--Title-->
-    <title>Name the footballer!</title>
+    <title>Name the footballer</title>
     <!--Favicon-->
     <link rel="icon" type="images/x-icon" href="favicon/Favicon-32x32.png">
     <!--Stylesheet-->
@@ -17,9 +17,9 @@
 
 <body>
     <section class="container">
-        <h1 class="heading">Guess the footballer!</h1>
+        <h1 class="heading">Guess the footballer</h1>
         <div class="game-area">
-            <h3>Name the footballer!</h3>
+            <h3>Name the footballer</h3>
             <div class="controls-area">
                 <p>Who's this?</p>
                 <img id="randImg" src="" alt="Random image" />
