--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Number Guess Game. Leisure game, Project game">
     <meta name="keywords" content="number game, guess a number game, game, guess game">
     <!--Title-->
-    <title>Name the footballer</title>
+    <title>Guess the footballer</title>
     <!--Favicon-->
     <link rel="icon" type="images/x-icon" href="favicon/Favicon-32x32.png">
     <!--Stylesheet-->
@@ -19,24 +19,27 @@
     <section class="container">
         <h1 class="heading">Guess the footballer</h1>
         <div class="game-area">
-            <h3>Name the footballer</h3>
-            <div class="controls-area">
-                <p>Who's this?</p>
-                <img id="randImg" src="" alt="Random image" />
-            </div>
+
+            <h3>Who's this?</h3>
+            <img id="randImg" src="" alt="Random image" />
+            <p>Make a choice</p>
+            <button data-choice="0" class="control">0</button>
+            <button data-choice="0" class="control">0</button>
+            <button data-choice="0" class="control">0</button>
+            <button data-choice="0" class="control">0</button>
         </div>
-        <div class="messages-area" id="messages"></div>
         <div class="score-area">
             <input type="text" id="answer-box">
             <button data-type="submit">Submit Answer</button>
         </div>
+        <div class="messages-area" id="messages"></div>
         <div>
             <p class="scores">Correct Answers:<span id="score">0</span></p>
             <p class="scores">Incorrect Answers:<span id="score">0</span></p>
         </div>
         <div class="rules-area">
             <h3>Rules</h3>
-            <p>Three chances to guess the correct number!</p>
+            <p>You have only chance to guess player right!</p>
         </div>
     </section>
 
