Edit html and style sheet

--- a/index.html
+++ b/index.html
@@ -23,18 +23,22 @@
             <h3>Who's this?</h3>
             <img id="randImg" src="" alt="Random image" />
             <p>Make a choice</p>
-            <button data-choice="0" class="control">0</button>
+            <button data-choice="0" class="control">SELECT ANSWER</button>
             <br>
-            <button data-choice="0" class="control">0</button>
+            <button data-choice="1" class="control">SELECT ANSWER</button>
             <br>
-            <button data-choice="0" class="control">0</button>
+            <button data-choice="2" class="control">SELECT ANSWER</button>
             <br>
-            <button data-choice="0" class="control">0</button>
+            <button data-choice="3" class="control">SELECT ANSWER</button>
+            <br>
         </div>
         <div class="messages-area" id="messages"></div>
         <div>
             <p class="scores">Correct Answers:<span id="score">0</span></p>
             <p class="scores">Incorrect Answers:<span id="score">0</span></p>
+        </div>
+        <div class="reset">
+            <button data-choice="5" class="reset-btn">Reset</button>
         </div>
         <div class="rules-area">
             <h3>Rules</h3>
