--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Number Guess Game. Leisure game, Project game">
     <meta name="keywords" content="number game, guess a number game, game, guess game">
     <!--Title-->
-    <title>Guess the footballer</title>
+    <title>Name the footballer</title>
     <!--Favicon-->
     <link rel="icon" type="images/x-icon" href="favicon/Favicon-32x32.png">
     <!--Stylesheet-->
@@ -17,17 +17,18 @@
 
 <body>
     <div class="quiz-container">
-        <h1 class="heading">Guess the footballer</h1>
+        <h1 class="heading">Name the footballer</h1>
         <div class="game-area">
             <h3 id="question">Who's this?</h3>
             <img id="randImg" src="" alt="Random image" />
-        </div>
+            <div class="choice-container">
+                <button data-choice="0" class="contr0l"></button>
+                <br>
+                <button data-choice="1" class="contr0l"></button>
+                <br>
+                <button data-choice="2" class="contr0l"></button>
+            </div> 
         <div class="messages-area" id="messages"></div>
-        <div class="choice-container">
-            <button data-choice="0" class="contr0l"></button>
-            <button data-choice="1" class="contr0l"></button>
-            <button data-choice="2" class="contr0l"></button>
-        </div>
         <div>
             <p class="scores">Correct Answers:<span id="score">0</span></p>
             <p class="scores">Incorrect Answers:<span id="score">0</span></p>
