--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
         <h1 class="heading">Name the footballer</h1>
         <div class="game-area">
             <h3 id="question">Who's this?</h3>
-            <img id="randImg" src="" alt="Random image" />
+            <div class="image-container">
+                <img id="randImg" src="" alt="Random image" />
+            </div>
             <div class="choice-container">
                 <button data-choice="0" class="contr0l"></button>
                 <br>
                 <button data-choice="1" class="contr0l"></button>
                 <br>
                 <button data-choice="2" class="contr0l"></button>
-            </div> 
+            </div>
         <div class="messages-area" id="messages"></div>
         <div>
             <p class="scores">Correct Answers:<span id="score">0</span></p>
