--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p class="scores">Correct Answers:<span id="score">0</span></p>
             <p class="scores">Incorrect Answers:<span id="score">0</span></p>
         </div>
-        <div class="reset">
+        <div class="reset-area">
             <button data-choice="reset" class="reset-btn">Reset</button>
         </div>
     </div>
