--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Meta tags for search engines-->
-    <meta name="description" content="Number Guess Game. Leisure game, Project game">
-    <meta name="keywords" content="number game, guess a number game, game, guess game">
+    <meta name="description" content="Soccer Quiz Game. Leisure game, Football game">
+    <meta name="keywords" content="soccer quiz game, quiz game, football game, game">
     <!--Title-->
-    <title>Name the footballer</title>
+    <title>Soccer Quiz Game</title>
     <!--Favicon-->
     <link rel="icon" type="images/x-icon" href="favicon/Favicon-32x32.png">
     <!--Stylesheet-->
@@ -17,17 +17,17 @@
 
 <body>
     <div class="quiz-container">
-        <h1 class="heading">Name the footballer</h1>
-        <div class="game-area">
-            <h3 id="question">Who's this?</h3>
-            <div class="image-container">
+        <h1 class="heading">Soccer Quiz Game</h1>
+        <div id="game-area">
+            <h3 id="question">Who's the player?</h3>
+            <div id="image-container">
                 <img id="randImg" src="" alt="Random image" />
             </div>
-            <div class="answer-container">
-                <p class="answer-message">Enter Answer:</p>
+            <div id="answer-container">
+                <p id="answer-message">Enter Answer:</p>
                 <input id="answer-box" type="text">
             </div>
-        <div class="messages-area" id="messages"></div>
+        <div id="messages-area" id="messages"></div>
         <div>
             <p class="scores">Correct Answers:<span id="score">0</span></p>
             <p class="scores">Incorrect Answers:<span id="score">0</span></p>
