Add submit button to html file

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <div id="answer-container">
                 <p id="answer-message">Enter Answer:</p>
                 <input id="answer-box" type="text">
+                <button data-choice="submit" class="submit-btn">Submit</button>
+
             </div>
         <div id="messages-area" id="messages"></div>
         <div>
